--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,7 @@
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
     --text-color: #333;
+    --default-layout-horizontal-spacer: 24px;
     --white: #fff;
     --black: black
 }
