--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 var(--default-layout-horizontal-spacer);
 }
 
 
@@ -98,4 +99,13 @@
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+
+.more-btn {
+    margin-left: 16px;
+    cursor: pointer;
+    font-style: normal;
+    padding: 8px;
+    font-size: 20px;
+    background-color: transparent;
 }
