UI Sidebar and Working #Heading 5

--- a/src/components/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
+++ b/src/components/Layout/DefaultLayout/Sidebar/Sidebar.module.scss
@@ -1,3 +1,30 @@
 .wrapper {
+    margin-top: 15px;
     width: 350px;
+    
+}
+
+.menu-items{
+    list-style: none;
+    display: flex;
+    padding: 12px 0px;
+    cursor: pointer;
+    user-select: none;
+    font-size: 18px;
+    border: 1px solid transparent;
+    
+
+    &:hover{ 
+        color: var(--primary);
+        border-color: var(--primary); 
+        border-radius: 5px;
+    }
+
+    &:active{
+        background-color: rgba(22, 24, 35, 0.03);
+    }
+
+    li{
+        margin-left: 14px;
+    }
 }
